# partikl

./: .gitignore  Cargo.toml
src/: args.rs  core.rs  loading.rs  main.rs  render.rs  sim.rs  ui.rs
