[package]
name = "partikl"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "0.7.0"
structopt = "0.3"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "d353fbc6ea9e0c4fa69fc3b8e646e1ce79fbbc16"

[dependencies.chrono]
version = "0.4.19"
features = [ "serde" ]

[dependencies.rand]
version = "0.8.4"
features = [ "small_rng" ]

[dependencies.serde]
version = "1.0.131"
features = [ "serde_derive" ]
