[package]
name = "partikl"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "0.8.1"
clap = { version = "4", features = [ "derive" ] }
bevy = "0.15"

[dependencies.chrono]
version = "0.4.19"
features = [ "serde" ]

[dependencies.rand]
version = "0.8.4"
features = [ "small_rng" ]

[dependencies.serde]
version = "1.0.131"
features = [ "serde_derive" ]
